--- a/source/python/Linear_Regression.ipynb
+++ b/source/python/Linear_Regression.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
     "\n",
     "# https://docs.sqlalchemy.org/en/14/core/engines.html#sqlite\n",
     "# Module 9 Challenge\n",
-    "engine = create_engine(r'sqlite:///C:\\Users\\duclu\\blended_project_1\\data\\LIFE_EXPECTANCY_DB.db')\n",
+    "engine = create_engine(\"sqlite:///../../data/LIFE_EXPECTANCY_DB.db\")\n",
     "\n",
     "# reflect an existing database into a new model\n",
     "Base = automap_base()\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "['EXPECTANCY_TABLE', 'HAPPINESS_TABLE']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        " 'SCHOOLING']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        " 'DYSTOPIA']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2205,7 +2205,13 @@
       "(1898, 'Nigeria', 2011, 'Developing', 52.3, 375.0, 513.0, 8.75, 187.5733187, 46.0, 18843.0, 22.8, 802.0, 48.0, 3.69, 48.0, 4.7, 2527.9423, 16287776.0, 11.0, 1.9, 0.5, 9.6)\n",
       "(1899, 'Nigeria', 2010, 'Developing', 52.0, 374.0, 521.0, 8.9, 133.1230872, 49.0, 8491.0, 22.2, 817.0, 54.0, 3.47, 54.0, 4.8, 2327.3267, 158578261.0, 11.3, 11.2, 0.492, 9.5)\n",
       "(1900, 'Nigeria', 2009, 'Developing', 51.6, 376.0, 527.0, 9.05, 14.5676468, 63.0, 1272.0, 21.6, 832.0, 66.0, 4.24, 63.0, 4.9, 197.661422, 15442181.0, 11.7, 11.6, 0.487, 9.3)\n",
-      "(1901, 'Nigeria', 2008, 'Developing', 59.0, 386.0, 536.0, 9.3, 105.5910629, 41.0, 9960.0, 21.0, 848.0, 6.0, 4.0, 53.0, 5.0, 1383.893354, 1534739.0, 12.0, 11.9, 0.481, 9.2)\n",
+      "(1901, 'Nigeria', 2008, 'Developing', 59.0, 386.0, 536.0, 9.3, 105.5910629, 41.0, 9960.0, 21.0, 848.0, 6.0, 4.0, 53.0, 5.0, 1383.893354, 1534739.0, 12.0, 11.9, 0.481, 9.2)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "(1902, 'Nigeria', 2007, 'Developing', 55.0, 388.0, 542.0, 9.55, 104.4746444, 42.0, 2613.0, 2.4, 863.0, 54.0, 4.47, 42.0, 5.2, 1136.829645, 14641724.0, 12.3, 12.3, 0.477, 9.1)\n",
       "(1903, 'Nigeria', 2006, 'Developing', 49.8, 396.0, 549.0, 9.66, 10.35779424, 27.0, 704.0, 19.9, 879.0, 46.0, 3.66, 4.0, 5.3, 119.743286, 14261494.0, 12.6, 12.6, 0.466, 9.0)\n",
       "(1904, 'Nigeria', 2005, 'Developing', 49.2, 4.0, 556.0, 9.71, 6.416252787, 18.0, 110927.0, 19.3, 893.0, 45.0, 4.11, 36.0, 5.4, 87.8938738, 138939478.0, 12.9, 12.9, 0.463, 8.9)\n",
@@ -2718,13 +2724,7 @@
       "(2411, 'South Sudan', 2014, 'Developing', 56.6, 343.0, 26.0, '', 46.0744686, '', 441.0, '', 39.0, 44.0, 2.74, 39.0, 3.5, 1151.861715, 1153971.0, '', '', 0.421, 4.9)\n",
       "(2412, 'South Sudan', 2013, 'Developing', 56.4, 345.0, 26.0, '', 47.44453, '', 525.0, '', 40.0, 5.0, 2.62, 45.0, 3.6, 1186.11325, 1117749.0, '', '', 0.417, 4.9)\n",
       "(2413, 'South Sudan', 2012, 'Developing', 56.0, 347.0, 26.0, '', 38.3382324, '', 1952.0, '', 40.0, 64.0, 2.77, 59.0, 3.8, 958.45581, 1818258.0, '', '', 0.419, 4.9)\n",
-      "(2414, 'South Sudan', 2011, 'Developing', 55.4, 355.0, 27.0, '', 0.0, '', 1256.0, '', 41.0, 66.0, '', 61.0, 3.9, 176.9713, 1448857.0, '', '', 0.429, 4.9)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "(2414, 'South Sudan', 2011, 'Developing', 55.4, 355.0, 27.0, '', 0.0, '', 1256.0, '', 41.0, 66.0, '', 61.0, 3.9, 176.9713, 1448857.0, '', '', 0.429, 4.9)\n",
       "(2415, 'South Sudan', 2010, 'Developing', 55.0, 359.0, 27.0, '', 0.0, '', 0.0, '', 41.0, '', '', '', 4.0, 1562.239346, 167192.0, '', '', 0.0, 0.0)\n",
       "(2416, 'South Sudan', 2009, 'Developing', 54.3, 369.0, 27.0, '', 0.0, '', 0.0, '', 42.0, '', '', '', 4.2, 1264.78998, 967667.0, '', '', 0.0, 0.0)\n",
       "(2417, 'South Sudan', 2008, 'Developing', 53.6, 377.0, 27.0, '', 0.0, '', 0.0, '', 42.0, '', '', '', 4.2, 1678.711862, 9263136.0, '', '', 0.0, 0.0)\n",
@@ -3287,7 +3287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3357,7 +3357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3550,7 +3550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -3607,7 +3607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3722,7 +3722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3775,7 +3775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3819,7 +3819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3828,7 +3828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -4033,7 +4033,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4044,7 +4044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -4249,7 +4249,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4261,7 +4261,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df.to_csv('../../data/visualize.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -4306,7 +4315,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4963,7 +4972,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
