Jeff update of data for all Happiness

--- a/source/python/jeff_working_notebook.ipynb
+++ b/source/python/jeff_working_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "['EXPECTANCY_TABLE', 'HAPPINESS_TABLE']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ID', 'COUNTRY', 'REGION', 'HAPPINESS_RANK', 'HAPPINESS_SCORE', 'STANDARD_ERROR', 'ECONOMY', 'FAMILY', 'HEALTH', 'FREEDOM', 'TRUST', 'GENEROSITY', 'DYSTOPIA']\n"
+      "['ID', 'COUNTRY', 'REGION', 'HAPPINESS_SCORE', 'HAPPINESS_RANK', 'LOW_CONF', 'HIGH_CONF', 'STANDARD_ERROR', 'ECONOMY', 'FAMILY', 'HEALTH', 'FREEDOM', 'TRUST', 'GENEROSITY', 'DYSTOPIA', 'YEAR']\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,8 +258,10 @@
     "    Happiness.ID,\n",
     "    Happiness.COUNTRY,\n",
     "    Happiness.REGION,\n",
-    "    Happiness.HAPPINESS_RANK,\n",
     "    Happiness.HAPPINESS_SCORE,\n",
+    "    Happiness.HAPPINESS_RANK,\n",
+    "    Happiness.LOW_CONF,\n",
+    "    Happiness.HIGH_CONF,    \n",
     "    Happiness.STANDARD_ERROR,\n",
     "    Happiness.ECONOMY,\n",
     "    Happiness.FAMILY,\n",
@@ -267,7 +269,8 @@
     "    Happiness.FREEDOM,\n",
     "    Happiness.TRUST,\n",
     "    Happiness.GENEROSITY,\n",
-    "    Happiness.DYSTOPIA\n",
+    "    Happiness.DYSTOPIA,\n",
+    "    Happiness.YEAR\n",
     "    ).all()\n",
     "\n",
     "#for temp_result in happy_results:\n",
@@ -276,65 +279,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      ID      COUNTRY                           REGION  HAPPINESS_RANK  \\\n",
-      "0      1  Switzerland                   Western Europe               1   \n",
-      "1      2      Iceland                   Western Europe               2   \n",
-      "2      3      Denmark                   Western Europe               3   \n",
-      "3      4       Norway                   Western Europe               4   \n",
-      "4      5       Canada                    North America               5   \n",
-      "..   ...          ...                              ...             ...   \n",
-      "153  154       Rwanda               Sub-Saharan Africa             154   \n",
-      "154  155        Benin               Sub-Saharan Africa             155   \n",
-      "155  156        Syria  Middle East and Northern Africa             156   \n",
-      "156  157      Burundi               Sub-Saharan Africa             157   \n",
-      "157  158         Togo               Sub-Saharan Africa             158   \n",
+      "      ID                   COUNTRY          REGION  HAPPINESS_RANK  \\\n",
+      "0      1               Switzerland  Western Europe             1.0   \n",
+      "1      2                   Iceland  Western Europe             2.0   \n",
+      "2      3                   Denmark  Western Europe             3.0   \n",
+      "3      4                    Norway  Western Europe             4.0   \n",
+      "4      5                    Canada   North America             5.0   \n",
+      "..   ...                       ...             ...             ...   \n",
+      "777  778                    Rwanda                           152.0   \n",
+      "778  779                  Tanzania                           153.0   \n",
+      "779  780               Afghanistan                           154.0   \n",
+      "780  781  Central African Republic                           155.0   \n",
+      "781  782               South Sudan                           156.0   \n",
       "\n",
-      "     HAPPINESS_SCORE  STANDARD_ERROR  ECONOMY   FAMILY   HEALTH  FREEDOM  \\\n",
-      "0              7.587         0.03411  1.39651  1.34951  0.94143  0.66557   \n",
-      "1              7.561         0.04884  1.30232  1.40223  0.94784  0.62877   \n",
-      "2              7.527         0.03328  1.32548  1.36058  0.87464  0.64938   \n",
-      "3              7.522         0.03880  1.45900  1.33095  0.88521  0.66973   \n",
-      "4              7.427         0.03553  1.32629  1.32261  0.90563  0.63297   \n",
-      "..               ...             ...      ...      ...      ...      ...   \n",
-      "153            3.465         0.03464  0.22208  0.77370  0.42864  0.59201   \n",
-      "154            3.340         0.03656  0.28665  0.35386  0.31910  0.48450   \n",
-      "155            3.006         0.05015  0.66320  0.47489  0.72193  0.15684   \n",
-      "156            2.905         0.08658  0.01530  0.41587  0.22396  0.11850   \n",
-      "157            2.839         0.06727  0.20868  0.13995  0.28443  0.36453   \n",
+      "     HAPPINESS_SCORE LOW_CONF HIGH_CONF STANDARD_ERROR  ECONOMY   FAMILY  \\\n",
+      "0              7.587                           0.03411  1.39651  1.34951   \n",
+      "1              7.561                           0.04884  1.30232  1.40223   \n",
+      "2              7.527                           0.03328  1.32548  1.36058   \n",
+      "3              7.522                            0.0388  1.45900  1.33095   \n",
+      "4              7.427                           0.03553  1.32629  1.32261   \n",
+      "..               ...      ...       ...            ...      ...      ...   \n",
+      "777            3.334                                    0.35900  0.71100   \n",
+      "778            3.231                                    0.47600  0.88500   \n",
+      "779            3.203                                    0.35000  0.51700   \n",
+      "780            3.083                                    0.02600  0.00000   \n",
+      "781            2.853                                    0.30600  0.57500   \n",
       "\n",
-      "       TRUST  GENEROSITY  DYSTOPIA  \n",
-      "0    0.41978     0.29678   2.51738  \n",
-      "1    0.14145     0.43630   2.70201  \n",
-      "2    0.48357     0.34139   2.49204  \n",
-      "3    0.36503     0.34699   2.46531  \n",
-      "4    0.32957     0.45811   2.45176  \n",
-      "..       ...         ...       ...  \n",
-      "153  0.55191     0.22628   0.67042  \n",
-      "154  0.08010     0.18260   1.63328  \n",
-      "155  0.18906     0.47179   0.32858  \n",
-      "156  0.10062     0.19727   1.83302  \n",
-      "157  0.10731     0.16681   1.56726  \n",
+      "      HEALTH  FREEDOM    TRUST  GENEROSITY DYSTOPIA  YEAR  \n",
+      "0    0.94143  0.66557  0.41978     0.29678  2.51738  2015  \n",
+      "1    0.94784  0.62877  0.14145     0.43630  2.70201  2015  \n",
+      "2    0.87464  0.64938  0.48357     0.34139  2.49204  2015  \n",
+      "3    0.88521  0.66973  0.36503     0.34699  2.46531  2015  \n",
+      "4    0.90563  0.63297  0.32957     0.45811  2.45176  2015  \n",
+      "..       ...      ...      ...         ...      ...   ...  \n",
+      "777  0.61400  0.55500    0.411     0.21700           2019  \n",
+      "778  0.49900  0.41700    0.147     0.27600           2019  \n",
+      "779  0.36100  0.00000    0.025     0.15800           2019  \n",
+      "780  0.10500  0.22500    0.035     0.23500           2019  \n",
+      "781  0.29500  0.01000    0.091     0.20200           2019  \n",
       "\n",
-      "[158 rows x 13 columns]\n"
+      "[782 rows x 16 columns]\n"
      ]
     }
    ],
    "source": [
     "# Convert Happiness list to dataframe\n",
     "happy_df = pd.DataFrame(happy_results, columns=Happiness_columns)\n",
+    "happy_df = happy_df.rename(columns={\"HAPPINESS_SCORE\":\"HAPPINESS_RANK\",\"HAPPINESS_RANK\":\"HAPPINESS_SCORE\"})\n",
+    "\n",
     "print(happy_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -342,58 +347,45 @@
      "output_type": "stream",
      "text": [
       "       ID      COUNTRY  YEAR      STATUS  EXPECTANCY  MORTALITY  INFANT_DEATH  \\\n",
-      "0    2522  Switzerland  2015   Developed        83.4       49.0           0.0   \n",
-      "1    1171      Iceland  2015   Developed        82.7       49.0           0.0   \n",
-      "2     738      Denmark  2015   Developed        86.0       71.0           0.0   \n",
-      "3    1911       Norway  2015   Developed        81.8       59.0           0.0   \n",
-      "4     497       Canada  2015  Developing        82.2       64.0           2.0   \n",
+      "0       1  Afghanistan  2015  Developing        65.0      263.0          62.0   \n",
+      "1      17      Albania  2015  Developing        77.8       74.0           0.0   \n",
+      "2      33      Algeria  2015  Developing        75.6       19.0          21.0   \n",
+      "3      49       Angola  2015  Developing        52.4      335.0          66.0   \n",
+      "4      81    Argentina  2015  Developing        76.3      116.0           8.0   \n",
       "..    ...          ...   ...         ...         ...        ...           ...   \n",
-      "130     1  Afghanistan  2015  Developing        65.0      263.0          62.0   \n",
-      "131  2152       Rwanda  2015  Developing        66.1      227.0          11.0   \n",
-      "132   273        Benin  2015  Developing        60.0      249.0          25.0   \n",
-      "133   417      Burundi  2015  Developing        59.6      288.0          21.0   \n",
-      "134  2618         Togo  2015  Developing        59.9      287.0          13.0   \n",
+      "130  2811      Uruguay  2015  Developing        77.0      116.0           0.0   \n",
+      "131  2827   Uzbekistan  2015  Developing        69.4      184.0          15.0   \n",
+      "132  2891        Yemen  2015  Developing        65.7      224.0          37.0   \n",
+      "133  2907       Zambia  2015  Developing        61.8       33.0          27.0   \n",
+      "134  2923     Zimbabwe  2015  Developing        67.0      336.0          22.0   \n",
       "\n",
-      "    ALCOHOL  EXPENDITURE_PERCENT HEPATITUS_B  ...  HAPPINESS_RANK  \\\n",
-      "0                       0.000000              ...               1   \n",
-      "1                       0.000000              ...               2   \n",
-      "2                       0.000000              ...               3   \n",
-      "3      5.97             0.000000              ...               4   \n",
-      "4                       0.000000          55  ...               5   \n",
-      "..      ...                  ...         ...  ...             ...   \n",
-      "130    0.01            71.279624          65  ...             153   \n",
-      "131                     0.000000          98  ...             154   \n",
-      "132                     0.000000          82  ...             155   \n",
-      "133                     0.000000          94  ...             157   \n",
-      "134                     0.000000          88  ...             158   \n",
+      "    ALCOHOL  EXPENDITURE_PERCENT HEPATITUS_B  ...  HIGH_CONF STANDARD_ERROR  \\\n",
+      "0      0.01            71.279624          65  ...                   0.03084   \n",
+      "1       4.6           364.975229          99  ...                   0.05013   \n",
+      "2                       0.000000          95  ...                   0.05099   \n",
+      "3                       0.000000          64  ...                   0.04758   \n",
+      "4                       0.000000          94  ...                   0.04612   \n",
+      "..      ...                  ...         ...  ...        ...            ...   \n",
+      "130                     0.000000          95  ...                   0.04539   \n",
+      "131                     0.000000          99  ...                   0.04361   \n",
+      "132                     0.000000          69  ...                   0.04367   \n",
+      "133                     0.000000           9  ...                   0.06988   \n",
+      "134                     0.000000          87  ...                   0.04290   \n",
       "\n",
-      "    HAPPINESS_SCORE  STANDARD_ERROR  ECONOMY   FAMILY   HEALTH  FREEDOM  \\\n",
-      "0             7.587         0.03411  1.39651  1.34951  0.94143  0.66557   \n",
-      "1             7.561         0.04884  1.30232  1.40223  0.94784  0.62877   \n",
-      "2             7.527         0.03328  1.32548  1.36058  0.87464  0.64938   \n",
-      "3             7.522         0.03880  1.45900  1.33095  0.88521  0.66973   \n",
-      "4             7.427         0.03553  1.32629  1.32261  0.90563  0.63297   \n",
-      "..              ...             ...      ...      ...      ...      ...   \n",
-      "130           3.575         0.03084  0.31982  0.30285  0.30335  0.23414   \n",
-      "131           3.465         0.03464  0.22208  0.77370  0.42864  0.59201   \n",
-      "132           3.340         0.03656  0.28665  0.35386  0.31910  0.48450   \n",
-      "133           2.905         0.08658  0.01530  0.41587  0.22396  0.11850   \n",
-      "134           2.839         0.06727  0.20868  0.13995  0.28443  0.36453   \n",
+      "     ECONOMY   FAMILY   HEALTH  FREEDOM    TRUST GENEROSITY DYSTOPIA  YEAR  \n",
+      "0    0.31982  0.30285  0.30335  0.23414  0.09719    0.36510  1.95210  2015  \n",
+      "1    0.87867  0.80434  0.81325  0.35733  0.06413    0.14272  1.89894  2015  \n",
+      "2    0.93929  1.07772  0.61766  0.28579  0.17383    0.07822  2.43209  2015  \n",
+      "3    0.75778  0.86040  0.16683  0.10384  0.07122    0.12344  1.94939  2015  \n",
+      "4    1.05351  1.24823  0.78723  0.44974  0.08484    0.11451  2.83600  2015  \n",
+      "..       ...      ...      ...      ...      ...        ...      ...   ...  \n",
+      "130  1.06166  1.20890  0.81160  0.60362  0.24558    0.23240  2.32142  2015  \n",
+      "131  0.63244  1.34043  0.59772  0.65821  0.30826    0.22837  2.23741  2015  \n",
+      "132  0.54649  0.68093  0.40064  0.35571  0.07854    0.09131  1.92313  2015  \n",
+      "133  0.47038  0.91612  0.29924  0.48827  0.12468    0.19591  2.63430  2015  \n",
+      "134  0.27100  1.03276  0.33475  0.25861  0.08079    0.18987  2.44191  2015  \n",
       "\n",
-      "       TRUST GENEROSITY DYSTOPIA  \n",
-      "0    0.41978    0.29678  2.51738  \n",
-      "1    0.14145    0.43630  2.70201  \n",
-      "2    0.48357    0.34139  2.49204  \n",
-      "3    0.36503    0.34699  2.46531  \n",
-      "4    0.32957    0.45811  2.45176  \n",
-      "..       ...        ...      ...  \n",
-      "130  0.09719    0.36510  1.95210  \n",
-      "131  0.55191    0.22628  0.67042  \n",
-      "132  0.08010    0.18260  1.63328  \n",
-      "133  0.10062    0.19727  1.83302  \n",
-      "134  0.10731    0.16681  1.56726  \n",
-      "\n",
-      "[135 rows x 36 columns]\n"
+      "[135 rows x 39 columns]\n"
      ]
     }
    ],
@@ -428,11 +420,13 @@
     "    Expectancy.THIN_5TO9_YR,\n",
     "    Expectancy.INC_COMPOSITION,\n",
     "    Expectancy.SCHOOLING,\n",
-    "    Happiness.ID.label('H_ID'),\n",
+    "    Happiness.ID,\n",
     "    Happiness.COUNTRY,\n",
     "    Happiness.REGION,\n",
-    "    Happiness.HAPPINESS_RANK,\n",
     "    Happiness.HAPPINESS_SCORE,\n",
+    "    Happiness.HAPPINESS_RANK,\n",
+    "    Happiness.LOW_CONF,\n",
+    "    Happiness.HIGH_CONF,    \n",
     "    Happiness.STANDARD_ERROR,\n",
     "    Happiness.ECONOMY,\n",
     "    Happiness.FAMILY,\n",
@@ -440,9 +434,11 @@
     "    Happiness.FREEDOM,\n",
     "    Happiness.TRUST,\n",
     "    Happiness.GENEROSITY,\n",
-    "    Happiness.DYSTOPIA\n",
+    "    Happiness.DYSTOPIA,\n",
+    "    Happiness.YEAR\n",
     ").join(Happiness, func.lower(Expectancy.COUNTRY) == func.lower(Happiness.COUNTRY)\n",
-    ").filter(Expectancy.YEAR == '2015').all()\n",
+    ").filter(Expectancy.YEAR == '2015'\n",
+    ").filter(Happiness.YEAR == '2015').all()\n",
     "\n",
     "happy_expect_join_df = pd.DataFrame(happy_expect_join, columns=happy_expect_join_columns)\n",
     "\n",
@@ -451,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -484,8 +480,10 @@
       "ID\n",
       "COUNTRY\n",
       "REGION\n",
-      "HAPPINESS_RANK\n",
       "HAPPINESS_SCORE\n",
+      "HAPPINESS_RANK\n",
+      "LOW_CONF\n",
+      "HIGH_CONF\n",
       "STANDARD_ERROR\n",
       "ECONOMY\n",
       "FAMILY\n",
@@ -493,7 +491,8 @@
       "FREEDOM\n",
       "TRUST\n",
       "GENEROSITY\n",
-      "DYSTOPIA\n"
+      "DYSTOPIA\n",
+      "YEAR\n"
      ]
     }
    ],
@@ -506,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -518,6 +517,8 @@
       "Column REGION has 0 null values\n",
       "Column HAPPINESS_RANK has 0 null values\n",
       "Column HAPPINESS_SCORE has 0 null values\n",
+      "Column LOW_CONF has 0 null values\n",
+      "Column HIGH_CONF has 0 null values\n",
       "Column STANDARD_ERROR has 0 null values\n",
       "Column ECONOMY has 0 null values\n",
       "Column FAMILY has 0 null values\n",
@@ -525,7 +526,8 @@
       "Column FREEDOM has 0 null values\n",
       "Column TRUST has 0 null values\n",
       "Column GENEROSITY has 0 null values\n",
-      "Column DYSTOPIA has 0 null values\n"
+      "Column DYSTOPIA has 0 null values\n",
+      "Column YEAR has 0 null values\n"
      ]
     }
    ],
@@ -537,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
